--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
   <title>{% block title %}Sistema Académico{% endblock %}</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <style>
     body {
       background-color: #F4F1DE;
@@ -89,6 +90,15 @@
                   <i class="bi bi-layout-text-sidebar"></i><span>Secciones</span>
                 </a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('matricula.lista_matriculas') }}">
+                  <i class="bi bi-card-checklist"></i><span>Matrículas</span>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('materia_seccion.lista_asignaciones') }}">
+                  <i class="bi bi-diagram-3"></i><span>Asignaciones</span>
+                </a>
             </ul>
           </div>
           {% elif session.get('user_role') == 2 %}
